# BE

./: .env.example  .gitignore  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements.txt
apps/auth/: models.py  serializers.py  urls.py  views.py
apps/auth/migrations/: 0001_initial.py
apps/bookmarks/: models.py  serializers.py  urls.py  views.py
apps/bookmarks/migrations/: 0001_initial.py
apps/roadmaps/: apps.py  models.py  serializers.py  urls.py  views.py
apps/roadmaps/migrations/: 0001_initial.py  0002_remove_roadmap_is_public_roadmap_description.py  0003_roadmap_is_public_roadmapnode_content.py  0004_remove_roadmap_is_public.py
roadmap_project/: asgi.py  settings.py  urls.py  wsgi.py
